removed weird line on logos

--- a/sass/_main.scss
+++ b/sass/_main.scss
@@ -168,6 +168,7 @@ section {
     a {
       height: 50px;
       display: inline-block;
+      text-decoration: none;
       &:before {
         content: "";
         display: inline-block;
