fixed logo image

--- a/sass/_main.scss
+++ b/sass/_main.scss
@@ -224,6 +224,12 @@ section {
       width: 140px;
     }
   }
+  &#appdiff {
+    margin-bottom: 0;
+    img {
+      width: 170px;
+    }
+  }
 }
 
 
