--- a/stylesheets/screen.css
+++ b/stylesheets/screen.css
@@ -636,32 +636,40 @@ section {
 .company#stealth img {
   width: 164px;
 }
-/* line 221, ../sass/_main.scss */
-.company#domino {
-  margin-bottom: 0;
-}
 /* line 223, ../sass/_main.scss */
 .company#domino img {
   width: 140px;
-}
-/* line 227, ../sass/_main.scss */
-.company#appdiff {
-  margin-bottom: 0;
 }
 /* line 229, ../sass/_main.scss */
 .company#appdiff img {
   width: 170px;
 }
+/* line 233, ../sass/_main.scss */
+.company#focal {
+  margin-bottom: 0;
+}
+/* line 235, ../sass/_main.scss */
+.company#focal img {
+  width: 78px;
+}
+/* line 239, ../sass/_main.scss */
+.company#lilt {
+  margin-bottom: 0;
+}
+/* line 241, ../sass/_main.scss */
+.company#lilt img {
+  width: 50px;
+}
 
-/* line 236, ../sass/_main.scss */
+/* line 248, ../sass/_main.scss */
 #people {
   background: #F5F5F5;
 }
-/* line 238, ../sass/_main.scss */
+/* line 250, ../sass/_main.scss */
 #people h2 {
   color: #155B62;
 }
-/* line 241, ../sass/_main.scss */
+/* line 253, ../sass/_main.scss */
 #people ul {
   *zoom: 1;
 }
@@ -674,18 +682,18 @@ section {
 #people ul:after {
   clear: both;
 }
-/* line 243, ../sass/_main.scss */
+/* line 255, ../sass/_main.scss */
 #people ul li {
   float: left;
   width: 30.864197530864%;
   margin-right: 3.7037%;
 }
-/* line 247, ../sass/_main.scss */
+/* line 259, ../sass/_main.scss */
 #people ul li:last-child {
   margin-right: 0;
 }
 
-/* line 253, ../sass/_main.scss */
+/* line 265, ../sass/_main.scss */
 .person {
   width: 100px;
   height: 100px;
@@ -695,12 +703,12 @@ section {
   overflow: hidden;
   margin-bottom: 20px;
 }
-/* line 259, ../sass/_main.scss */
+/* line 271, ../sass/_main.scss */
 .person img {
   max-width: 100%;
 }
 
-/* line 267, ../sass/_main.scss */
+/* line 279, ../sass/_main.scss */
 footer {
   background: #b5533f;
   color: white;
@@ -722,22 +730,22 @@ footer:before, footer:after {
 footer:after {
   clear: both;
 }
-/* line 278, ../sass/_main.scss */
+/* line 290, ../sass/_main.scss */
 footer .logo {
   float: left;
   margin-right: 3.7037%;
   margin-bottom: 0;
 }
-/* line 283, ../sass/_main.scss */
+/* line 295, ../sass/_main.scss */
 footer p {
   margin-bottom: 0;
 }
-/* line 286, ../sass/_main.scss */
+/* line 298, ../sass/_main.scss */
 footer .contact-details {
   float: left;
   margin-top: 13px;
 }
-/* line 290, ../sass/_main.scss */
+/* line 302, ../sass/_main.scss */
 footer #copyright {
   float: right;
   text-align: right;
@@ -748,7 +756,7 @@ footer #copyright {
    Media Queries
    ========================================================================== */
 @media (max-width: 1024px) {
-  /* line 323, ../sass/_main.scss */
+  /* line 335, ../sass/_main.scss */
   #hero-content {
     width: 71.428571428571%;
   }
@@ -756,116 +764,116 @@ footer #copyright {
 /* Portrait tablet to landscape and desktop */
 /* Landscape phone to portrait tablet */
 @media (max-width: 768px) {
-  /* line 334, ../sass/_main.scss */
+  /* line 346, ../sass/_main.scss */
   #introduction {
     font-size: 14px;
   }
 }
 /* Landscape phones and down */
 @media (max-width: 667px) {
-  /* line 342, ../sass/_main.scss */
+  /* line 354, ../sass/_main.scss */
   section {
     padding: 100px 0;
   }
 
-  /* line 345, ../sass/_main.scss */
+  /* line 357, ../sass/_main.scss */
   h2 {
     font-size: 34px;
     line-height: 42px;
   }
 
-  /* line 349, ../sass/_main.scss */
+  /* line 361, ../sass/_main.scss */
   #introduction {
     font-size: 16px;
   }
 
-  /* line 352, ../sass/_main.scss */
+  /* line 364, ../sass/_main.scss */
   #hero-content {
     width: 100%;
   }
 
-  /* line 355, ../sass/_main.scss */
+  /* line 367, ../sass/_main.scss */
   #intro-content .col-4, #press .col-4 {
     width: 100%;
     margin-right: 0;
     float: none;
   }
 
-  /* line 360, ../sass/_main.scss */
+  /* line 372, ../sass/_main.scss */
   #introduction {
     font-size: 18px;
   }
 
-  /* line 363, ../sass/_main.scss */
+  /* line 375, ../sass/_main.scss */
   #people ul li {
     width: 100%;
     margin-right: 0;
     float: none;
     margin-bottom: 60px;
   }
-  /* line 368, ../sass/_main.scss */
+  /* line 380, ../sass/_main.scss */
   #people ul li:last-child {
     margin-bottom: 0;
   }
 }
 @media (max-width: 414px) {
-  /* line 375, ../sass/_main.scss */
+  /* line 387, ../sass/_main.scss */
   section {
     padding: 80px 0;
   }
 
-  /* line 378, ../sass/_main.scss */
+  /* line 390, ../sass/_main.scss */
   .container {
     padding: 0 20px;
   }
 
-  /* line 381, ../sass/_main.scss */
+  /* line 393, ../sass/_main.scss */
   h1 {
     font-size: 32px;
     line-height: 40px;
   }
 
-  /* line 385, ../sass/_main.scss */
+  /* line 397, ../sass/_main.scss */
   #hero p {
     font-size: 18px;
   }
 
-  /* line 388, ../sass/_main.scss */
+  /* line 400, ../sass/_main.scss */
   h2 {
     margin-bottom: 40px;
   }
 
-  /* line 391, ../sass/_main.scss */
+  /* line 403, ../sass/_main.scss */
   #introduction {
     font-size: 16px;
   }
 
-  /* line 394, ../sass/_main.scss */
+  /* line 406, ../sass/_main.scss */
   .company {
     width: 100%;
     margin-right: 0;
     float: none;
   }
 
-  /* line 399, ../sass/_main.scss */
+  /* line 411, ../sass/_main.scss */
   footer .logo {
     float: none;
     margin-bottom: 60px;
   }
 
-  /* line 403, ../sass/_main.scss */
+  /* line 415, ../sass/_main.scss */
   footer .contact-details {
     float: none;
   }
 
-  /* line 406, ../sass/_main.scss */
+  /* line 418, ../sass/_main.scss */
   footer #copyright {
     text-align: left;
     float: none;
   }
 }
 @media only screen and (-webkit-min-device-pixel-ratio: 1.5), only screen and (min-device-pixel-ratio: 1.5) {
-  /* line 417, ../sass/_main.scss */
+  /* line 429, ../sass/_main.scss */
   .logo {
     background-image: url("../img/logo@2x.png");
   }
