--- a/sass/_main.scss
+++ b/sass/_main.scss
@@ -219,27 +219,29 @@ section {
       width: 164px;
   }
   &#domino {
-    // margin-bottom: 0;
     img {
       width: 140px;
     }
   }
   &#appdiff {
-    // margin-bottom: 0;
     img {
       width: 170px;
     }
   }
   &#focal {
-    margin-bottom: 0;
     img {
       width: 78px;
     }
   }
   &#lilt {
-    margin-bottom: 0;
     img {
       width: 50px;
+    }
+  }
+  &#falkonry {
+    margin-bottom: 0;
+    img {
+      width: 140px;
     }
   }
 }
