--- a/stylesheets/screen.css
+++ b/stylesheets/screen.css
@@ -636,40 +636,40 @@ section {
 .company#stealth img {
   width: 164px;
 }
-/* line 223, ../sass/_main.scss */
+/* line 222, ../sass/_main.scss */
 .company#domino img {
   width: 140px;
 }
-/* line 229, ../sass/_main.scss */
+/* line 227, ../sass/_main.scss */
 .company#appdiff img {
   width: 170px;
 }
-/* line 233, ../sass/_main.scss */
-.company#focal {
-  margin-bottom: 0;
-}
-/* line 235, ../sass/_main.scss */
+/* line 232, ../sass/_main.scss */
 .company#focal img {
   width: 78px;
 }
-/* line 239, ../sass/_main.scss */
-.company#lilt {
-  margin-bottom: 0;
-}
-/* line 241, ../sass/_main.scss */
+/* line 237, ../sass/_main.scss */
 .company#lilt img {
   width: 50px;
 }
+/* line 241, ../sass/_main.scss */
+.company#falkonry {
+  margin-bottom: 0;
+}
+/* line 243, ../sass/_main.scss */
+.company#falkonry img {
+  width: 140px;
+}
 
-/* line 248, ../sass/_main.scss */
+/* line 250, ../sass/_main.scss */
 #people {
   background: #F5F5F5;
 }
-/* line 250, ../sass/_main.scss */
+/* line 252, ../sass/_main.scss */
 #people h2 {
   color: #155B62;
 }
-/* line 253, ../sass/_main.scss */
+/* line 255, ../sass/_main.scss */
 #people ul {
   *zoom: 1;
 }
@@ -682,22 +682,22 @@ section {
 #people ul:after {
   clear: both;
 }
-/* line 255, ../sass/_main.scss */
+/* line 257, ../sass/_main.scss */
 #people ul li {
   float: left;
   width: 30.864197530864%;
   margin-right: 3.7037%;
 }
-/* line 259, ../sass/_main.scss */
+/* line 261, ../sass/_main.scss */
 #people ul li:nth-child(3) {
   margin-right: 0;
 }
-/* line 263, ../sass/_main.scss */
+/* line 265, ../sass/_main.scss */
 #people ul#top {
   margin-bottom: 30px;
 }
 
-/* line 268, ../sass/_main.scss */
+/* line 270, ../sass/_main.scss */
 .person {
   width: 100px;
   height: 100px;
@@ -707,12 +707,12 @@ section {
   overflow: hidden;
   margin-bottom: 20px;
 }
-/* line 274, ../sass/_main.scss */
+/* line 276, ../sass/_main.scss */
 .person img {
   max-width: 100%;
 }
 
-/* line 282, ../sass/_main.scss */
+/* line 284, ../sass/_main.scss */
 footer {
   background: #b5533f;
   color: white;
@@ -734,22 +734,22 @@ footer:before, footer:after {
 footer:after {
   clear: both;
 }
-/* line 293, ../sass/_main.scss */
+/* line 295, ../sass/_main.scss */
 footer .logo {
   float: left;
   margin-right: 3.7037%;
   margin-bottom: 0;
 }
-/* line 298, ../sass/_main.scss */
+/* line 300, ../sass/_main.scss */
 footer p {
   margin-bottom: 0;
 }
-/* line 301, ../sass/_main.scss */
+/* line 303, ../sass/_main.scss */
 footer .contact-details {
   float: left;
   margin-top: 13px;
 }
-/* line 305, ../sass/_main.scss */
+/* line 307, ../sass/_main.scss */
 footer #copyright {
   float: right;
   text-align: right;
@@ -760,7 +760,7 @@ footer #copyright {
    Media Queries
    ========================================================================== */
 @media (max-width: 1024px) {
-  /* line 338, ../sass/_main.scss */
+  /* line 340, ../sass/_main.scss */
   #hero-content {
     width: 71.428571428571%;
   }
@@ -768,116 +768,116 @@ footer #copyright {
 /* Portrait tablet to landscape and desktop */
 /* Landscape phone to portrait tablet */
 @media (max-width: 768px) {
-  /* line 349, ../sass/_main.scss */
+  /* line 351, ../sass/_main.scss */
   #introduction {
     font-size: 14px;
   }
 }
 /* Landscape phones and down */
 @media (max-width: 667px) {
-  /* line 357, ../sass/_main.scss */
+  /* line 359, ../sass/_main.scss */
   section {
     padding: 100px 0;
   }
 
-  /* line 360, ../sass/_main.scss */
+  /* line 362, ../sass/_main.scss */
   h2 {
     font-size: 34px;
     line-height: 42px;
   }
 
-  /* line 364, ../sass/_main.scss */
+  /* line 366, ../sass/_main.scss */
   #introduction {
     font-size: 16px;
   }
 
-  /* line 367, ../sass/_main.scss */
+  /* line 369, ../sass/_main.scss */
   #hero-content {
     width: 100%;
   }
 
-  /* line 370, ../sass/_main.scss */
+  /* line 372, ../sass/_main.scss */
   #intro-content .col-4, #press .col-4 {
     width: 100%;
     margin-right: 0;
     float: none;
   }
 
-  /* line 375, ../sass/_main.scss */
+  /* line 377, ../sass/_main.scss */
   #introduction {
     font-size: 18px;
   }
 
-  /* line 378, ../sass/_main.scss */
+  /* line 380, ../sass/_main.scss */
   #people ul li {
     width: 100%;
     margin-right: 0;
     float: none;
     margin-bottom: 60px;
   }
-  /* line 383, ../sass/_main.scss */
+  /* line 385, ../sass/_main.scss */
   #people ul li:last-child {
     margin-bottom: 0;
   }
 }
 @media (max-width: 414px) {
-  /* line 390, ../sass/_main.scss */
+  /* line 392, ../sass/_main.scss */
   section {
     padding: 80px 0;
   }
 
-  /* line 393, ../sass/_main.scss */
+  /* line 395, ../sass/_main.scss */
   .container {
     padding: 0 20px;
   }
 
-  /* line 396, ../sass/_main.scss */
+  /* line 398, ../sass/_main.scss */
   h1 {
     font-size: 32px;
     line-height: 40px;
   }
 
-  /* line 400, ../sass/_main.scss */
+  /* line 402, ../sass/_main.scss */
   #hero p {
     font-size: 18px;
   }
 
-  /* line 403, ../sass/_main.scss */
+  /* line 405, ../sass/_main.scss */
   h2 {
     margin-bottom: 40px;
   }
 
-  /* line 406, ../sass/_main.scss */
+  /* line 408, ../sass/_main.scss */
   #introduction {
     font-size: 16px;
   }
 
-  /* line 409, ../sass/_main.scss */
+  /* line 411, ../sass/_main.scss */
   .company {
     width: 100%;
     margin-right: 0;
     float: none;
   }
 
-  /* line 414, ../sass/_main.scss */
+  /* line 416, ../sass/_main.scss */
   footer .logo {
     float: none;
     margin-bottom: 60px;
   }
 
-  /* line 418, ../sass/_main.scss */
+  /* line 420, ../sass/_main.scss */
   footer .contact-details {
     float: none;
   }
 
-  /* line 421, ../sass/_main.scss */
+  /* line 423, ../sass/_main.scss */
   footer #copyright {
     text-align: left;
     float: none;
   }
 }
 @media only screen and (-webkit-min-device-pixel-ratio: 1.5), only screen and (min-device-pixel-ratio: 1.5) {
-  /* line 432, ../sass/_main.scss */
+  /* line 434, ../sass/_main.scss */
   .logo {
     background-image: url("../img/logo@2x.png");
   }
