added new companies

--- a/sass/_main.scss
+++ b/sass/_main.scss
@@ -239,7 +239,21 @@ section {
     }
   }
   &#falkonry {
-    margin-bottom: 0;
+    img {
+      width: 140px;
+    }
+  }
+  &#dor {
+    img {
+      width: 72px;
+    }
+  }
+  &#marketing-evolution {
+    img {
+      width: 160px;
+    }
+  }
+  &#invenia {
     img {
       width: 140px;
     }
