--- a/stylesheets/screen.css
+++ b/stylesheets/screen.css
@@ -2,7 +2,7 @@
  * In this file you should write your main styles. (or centralize your imports)
  * Import this file using the following HTML or equivalent:
  * <link href="/stylesheets/screen.css" media="screen, projection" rel="stylesheet" type="text/css" /> */
-/* line 5, ../../../../../usr/local/Cellar/ruby/2.1.1/lib/ruby/gems/2.1.0/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
+/* line 5, ../../../.rvm/gems/ruby-2.1.2/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
@@ -24,45 +24,45 @@ time, mark, audio, video {
   vertical-align: baseline;
 }
 
-/* line 22, ../../../../../usr/local/Cellar/ruby/2.1.1/lib/ruby/gems/2.1.0/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
+/* line 22, ../../../.rvm/gems/ruby-2.1.2/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
 html {
   line-height: 1;
 }
 
-/* line 24, ../../../../../usr/local/Cellar/ruby/2.1.1/lib/ruby/gems/2.1.0/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
+/* line 24, ../../../.rvm/gems/ruby-2.1.2/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
 ol, ul {
   list-style: none;
 }
 
-/* line 26, ../../../../../usr/local/Cellar/ruby/2.1.1/lib/ruby/gems/2.1.0/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
+/* line 26, ../../../.rvm/gems/ruby-2.1.2/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
 table {
   border-collapse: collapse;
   border-spacing: 0;
 }
 
-/* line 28, ../../../../../usr/local/Cellar/ruby/2.1.1/lib/ruby/gems/2.1.0/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
+/* line 28, ../../../.rvm/gems/ruby-2.1.2/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
 caption, th, td {
   text-align: left;
   font-weight: normal;
   vertical-align: middle;
 }
 
-/* line 30, ../../../../../usr/local/Cellar/ruby/2.1.1/lib/ruby/gems/2.1.0/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
+/* line 30, ../../../.rvm/gems/ruby-2.1.2/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
 q, blockquote {
   quotes: none;
 }
-/* line 103, ../../../../../usr/local/Cellar/ruby/2.1.1/lib/ruby/gems/2.1.0/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
+/* line 103, ../../../.rvm/gems/ruby-2.1.2/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
 q:before, q:after, blockquote:before, blockquote:after {
   content: "";
   content: none;
 }
 
-/* line 32, ../../../../../usr/local/Cellar/ruby/2.1.1/lib/ruby/gems/2.1.0/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
+/* line 32, ../../../.rvm/gems/ruby-2.1.2/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
 a img {
   border: none;
 }
 
-/* line 116, ../../../../../usr/local/Cellar/ruby/2.1.1/lib/ruby/gems/2.1.0/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
+/* line 116, ../../../.rvm/gems/ruby-2.1.2/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
 article, aside, details, figcaption, figure, footer, header, hgroup, main, menu, nav, section, summary {
   display: block;
 }
@@ -652,24 +652,32 @@ section {
 .company#lilt img {
   width: 50px;
 }
-/* line 241, ../sass/_main.scss */
-.company#falkonry {
-  margin-bottom: 0;
-}
-/* line 243, ../sass/_main.scss */
+/* line 242, ../sass/_main.scss */
 .company#falkonry img {
   width: 140px;
 }
+/* line 247, ../sass/_main.scss */
+.company#dor img {
+  width: 72px;
+}
+/* line 252, ../sass/_main.scss */
+.company#marketing-evolution img {
+  width: 160px;
+}
+/* line 257, ../sass/_main.scss */
+.company#invenia img {
+  width: 140px;
+}
 
-/* line 250, ../sass/_main.scss */
+/* line 264, ../sass/_main.scss */
 #people {
   background: #F5F5F5;
 }
-/* line 252, ../sass/_main.scss */
+/* line 266, ../sass/_main.scss */
 #people h2 {
   color: #155B62;
 }
-/* line 255, ../sass/_main.scss */
+/* line 269, ../sass/_main.scss */
 #people ul {
   *zoom: 1;
 }
@@ -682,22 +690,22 @@ section {
 #people ul:after {
   clear: both;
 }
-/* line 257, ../sass/_main.scss */
+/* line 271, ../sass/_main.scss */
 #people ul li {
   float: left;
   width: 30.864197530864%;
   margin-right: 3.7037%;
 }
-/* line 261, ../sass/_main.scss */
+/* line 275, ../sass/_main.scss */
 #people ul li:nth-child(3) {
   margin-right: 0;
 }
-/* line 265, ../sass/_main.scss */
+/* line 279, ../sass/_main.scss */
 #people ul#top {
   margin-bottom: 30px;
 }
 
-/* line 270, ../sass/_main.scss */
+/* line 284, ../sass/_main.scss */
 .person {
   width: 100px;
   height: 100px;
@@ -707,12 +715,12 @@ section {
   overflow: hidden;
   margin-bottom: 20px;
 }
-/* line 276, ../sass/_main.scss */
+/* line 290, ../sass/_main.scss */
 .person img {
   max-width: 100%;
 }
 
-/* line 284, ../sass/_main.scss */
+/* line 298, ../sass/_main.scss */
 footer {
   background: #b5533f;
   color: white;
@@ -734,22 +742,22 @@ footer:before, footer:after {
 footer:after {
   clear: both;
 }
-/* line 295, ../sass/_main.scss */
+/* line 309, ../sass/_main.scss */
 footer .logo {
   float: left;
   margin-right: 3.7037%;
   margin-bottom: 0;
 }
-/* line 300, ../sass/_main.scss */
+/* line 314, ../sass/_main.scss */
 footer p {
   margin-bottom: 0;
 }
-/* line 303, ../sass/_main.scss */
+/* line 317, ../sass/_main.scss */
 footer .contact-details {
   float: left;
   margin-top: 13px;
 }
-/* line 307, ../sass/_main.scss */
+/* line 321, ../sass/_main.scss */
 footer #copyright {
   float: right;
   text-align: right;
@@ -760,7 +768,7 @@ footer #copyright {
    Media Queries
    ========================================================================== */
 @media (max-width: 1024px) {
-  /* line 340, ../sass/_main.scss */
+  /* line 354, ../sass/_main.scss */
   #hero-content {
     width: 71.428571428571%;
   }
@@ -768,116 +776,116 @@ footer #copyright {
 /* Portrait tablet to landscape and desktop */
 /* Landscape phone to portrait tablet */
 @media (max-width: 768px) {
-  /* line 351, ../sass/_main.scss */
+  /* line 365, ../sass/_main.scss */
   #introduction {
     font-size: 14px;
   }
 }
 /* Landscape phones and down */
 @media (max-width: 667px) {
-  /* line 359, ../sass/_main.scss */
+  /* line 373, ../sass/_main.scss */
   section {
     padding: 100px 0;
   }
 
-  /* line 362, ../sass/_main.scss */
+  /* line 376, ../sass/_main.scss */
   h2 {
     font-size: 34px;
     line-height: 42px;
   }
 
-  /* line 366, ../sass/_main.scss */
+  /* line 380, ../sass/_main.scss */
   #introduction {
     font-size: 16px;
   }
 
-  /* line 369, ../sass/_main.scss */
+  /* line 383, ../sass/_main.scss */
   #hero-content {
     width: 100%;
   }
 
-  /* line 372, ../sass/_main.scss */
+  /* line 386, ../sass/_main.scss */
   #intro-content .col-4, #press .col-4 {
     width: 100%;
     margin-right: 0;
     float: none;
   }
 
-  /* line 377, ../sass/_main.scss */
+  /* line 391, ../sass/_main.scss */
   #introduction {
     font-size: 18px;
   }
 
-  /* line 380, ../sass/_main.scss */
+  /* line 394, ../sass/_main.scss */
   #people ul li {
     width: 100%;
     margin-right: 0;
     float: none;
     margin-bottom: 60px;
   }
-  /* line 385, ../sass/_main.scss */
+  /* line 399, ../sass/_main.scss */
   #people ul li:last-child {
     margin-bottom: 0;
   }
 }
 @media (max-width: 414px) {
-  /* line 392, ../sass/_main.scss */
+  /* line 406, ../sass/_main.scss */
   section {
     padding: 80px 0;
   }
 
-  /* line 395, ../sass/_main.scss */
+  /* line 409, ../sass/_main.scss */
   .container {
     padding: 0 20px;
   }
 
-  /* line 398, ../sass/_main.scss */
+  /* line 412, ../sass/_main.scss */
   h1 {
     font-size: 32px;
     line-height: 40px;
   }
 
-  /* line 402, ../sass/_main.scss */
+  /* line 416, ../sass/_main.scss */
   #hero p {
     font-size: 18px;
   }
 
-  /* line 405, ../sass/_main.scss */
+  /* line 419, ../sass/_main.scss */
   h2 {
     margin-bottom: 40px;
   }
 
-  /* line 408, ../sass/_main.scss */
+  /* line 422, ../sass/_main.scss */
   #introduction {
     font-size: 16px;
   }
 
-  /* line 411, ../sass/_main.scss */
+  /* line 425, ../sass/_main.scss */
   .company {
     width: 100%;
     margin-right: 0;
     float: none;
   }
 
-  /* line 416, ../sass/_main.scss */
+  /* line 430, ../sass/_main.scss */
   footer .logo {
     float: none;
     margin-bottom: 60px;
   }
 
-  /* line 420, ../sass/_main.scss */
+  /* line 434, ../sass/_main.scss */
   footer .contact-details {
     float: none;
   }
 
-  /* line 423, ../sass/_main.scss */
+  /* line 437, ../sass/_main.scss */
   footer #copyright {
     text-align: left;
     float: none;
   }
 }
 @media only screen and (-webkit-min-device-pixel-ratio: 1.5), only screen and (min-device-pixel-ratio: 1.5) {
-  /* line 434, ../sass/_main.scss */
+  /* line 448, ../sass/_main.scss */
   .logo {
     background-image: url("../img/logo@2x.png");
   }
