--- a/stylesheets/screen.css
+++ b/stylesheets/screen.css
@@ -672,13 +672,15 @@ section {
 /* line 264, ../sass/_main.scss */
 #people {
   background: #F5F5F5;
+  padding-bottom: 90px;
 }
-/* line 266, ../sass/_main.scss */
+/* line 267, ../sass/_main.scss */
 #people h2 {
   color: #155B62;
 }
-/* line 269, ../sass/_main.scss */
+/* line 270, ../sass/_main.scss */
 #people ul {
+  margin-bottom: 30px;
   *zoom: 1;
 }
 /* line 2, ../sass/_mixins.scss */
@@ -690,22 +692,18 @@ section {
 #people ul:after {
   clear: both;
 }
-/* line 271, ../sass/_main.scss */
+/* line 273, ../sass/_main.scss */
 #people ul li {
   float: left;
   width: 30.864197530864%;
   margin-right: 3.7037%;
 }
-/* line 275, ../sass/_main.scss */
+/* line 277, ../sass/_main.scss */
 #people ul li:nth-child(3) {
   margin-right: 0;
 }
-/* line 279, ../sass/_main.scss */
-#people ul#top {
-  margin-bottom: 30px;
-}
 
-/* line 284, ../sass/_main.scss */
+/* line 283, ../sass/_main.scss */
 .person {
   width: 100px;
   height: 100px;
@@ -715,12 +713,12 @@ section {
   overflow: hidden;
   margin-bottom: 20px;
 }
-/* line 290, ../sass/_main.scss */
+/* line 289, ../sass/_main.scss */
 .person img {
   max-width: 100%;
 }
 
-/* line 298, ../sass/_main.scss */
+/* line 297, ../sass/_main.scss */
 footer {
   background: #b5533f;
   color: white;
@@ -742,22 +740,22 @@ footer:before, footer:after {
 footer:after {
   clear: both;
 }
-/* line 309, ../sass/_main.scss */
+/* line 308, ../sass/_main.scss */
 footer .logo {
   float: left;
   margin-right: 3.7037%;
   margin-bottom: 0;
 }
-/* line 314, ../sass/_main.scss */
+/* line 313, ../sass/_main.scss */
 footer p {
   margin-bottom: 0;
 }
-/* line 317, ../sass/_main.scss */
+/* line 316, ../sass/_main.scss */
 footer .contact-details {
   float: left;
   margin-top: 13px;
 }
-/* line 321, ../sass/_main.scss */
+/* line 320, ../sass/_main.scss */
 footer #copyright {
   float: right;
   text-align: right;
@@ -768,7 +766,7 @@ footer #copyright {
    Media Queries
    ========================================================================== */
 @media (max-width: 1024px) {
-  /* line 354, ../sass/_main.scss */
+  /* line 353, ../sass/_main.scss */
   #hero-content {
     width: 71.428571428571%;
   }
@@ -776,116 +774,116 @@ footer #copyright {
 /* Portrait tablet to landscape and desktop */
 /* Landscape phone to portrait tablet */
 @media (max-width: 768px) {
-  /* line 365, ../sass/_main.scss */
+  /* line 364, ../sass/_main.scss */
   #introduction {
     font-size: 14px;
   }
 }
 /* Landscape phones and down */
 @media (max-width: 667px) {
-  /* line 373, ../sass/_main.scss */
+  /* line 372, ../sass/_main.scss */
   section {
     padding: 100px 0;
   }
 
-  /* line 376, ../sass/_main.scss */
+  /* line 375, ../sass/_main.scss */
   h2 {
     font-size: 34px;
     line-height: 42px;
   }
 
-  /* line 380, ../sass/_main.scss */
+  /* line 379, ../sass/_main.scss */
   #introduction {
     font-size: 16px;
   }
 
-  /* line 383, ../sass/_main.scss */
+  /* line 382, ../sass/_main.scss */
   #hero-content {
     width: 100%;
   }
 
-  /* line 386, ../sass/_main.scss */
+  /* line 385, ../sass/_main.scss */
   #intro-content .col-4, #press .col-4 {
     width: 100%;
     margin-right: 0;
     float: none;
   }
 
-  /* line 391, ../sass/_main.scss */
+  /* line 390, ../sass/_main.scss */
   #introduction {
     font-size: 18px;
   }
 
-  /* line 394, ../sass/_main.scss */
+  /* line 393, ../sass/_main.scss */
   #people ul li {
     width: 100%;
     margin-right: 0;
     float: none;
     margin-bottom: 60px;
   }
-  /* line 399, ../sass/_main.scss */
+  /* line 398, ../sass/_main.scss */
   #people ul li:last-child {
     margin-bottom: 0;
   }
 }
 @media (max-width: 414px) {
-  /* line 406, ../sass/_main.scss */
+  /* line 405, ../sass/_main.scss */
   section {
     padding: 80px 0;
   }
 
-  /* line 409, ../sass/_main.scss */
+  /* line 408, ../sass/_main.scss */
   .container {
     padding: 0 20px;
   }
 
-  /* line 412, ../sass/_main.scss */
+  /* line 411, ../sass/_main.scss */
   h1 {
     font-size: 32px;
     line-height: 40px;
   }
 
-  /* line 416, ../sass/_main.scss */
+  /* line 415, ../sass/_main.scss */
   #hero p {
     font-size: 18px;
   }
 
-  /* line 419, ../sass/_main.scss */
+  /* line 418, ../sass/_main.scss */
   h2 {
     margin-bottom: 40px;
   }
 
-  /* line 422, ../sass/_main.scss */
+  /* line 421, ../sass/_main.scss */
   #introduction {
     font-size: 16px;
   }
 
-  /* line 425, ../sass/_main.scss */
+  /* line 424, ../sass/_main.scss */
   .company {
     width: 100%;
     margin-right: 0;
     float: none;
   }
 
-  /* line 430, ../sass/_main.scss */
+  /* line 429, ../sass/_main.scss */
   footer .logo {
     float: none;
     margin-bottom: 60px;
   }
 
-  /* line 434, ../sass/_main.scss */
+  /* line 433, ../sass/_main.scss */
   footer .contact-details {
     float: none;
   }
 
-  /* line 437, ../sass/_main.scss */
+  /* line 436, ../sass/_main.scss */
   footer #copyright {
     text-align: left;
     float: none;
   }
 }
 @media only screen and (-webkit-min-device-pixel-ratio: 1.5), only screen and (min-device-pixel-ratio: 1.5) {
-  /* line 448, ../sass/_main.scss */
+  /* line 447, ../sass/_main.scss */
   .logo {
     background-image: url("../img/logo@2x.png");
   }
