--- a/stylesheets/screen.css
+++ b/stylesheets/screen.css
@@ -668,17 +668,21 @@ section {
 .company#invenia img {
   width: 140px;
 }
+/* line 262, ../sass/_main.scss */
+.company#constructor img {
+  width: 170px;
+}
 
-/* line 264, ../sass/_main.scss */
+/* line 269, ../sass/_main.scss */
 #people {
   background: #F5F5F5;
   padding-bottom: 90px;
 }
-/* line 267, ../sass/_main.scss */
+/* line 272, ../sass/_main.scss */
 #people h2 {
   color: #155B62;
 }
-/* line 270, ../sass/_main.scss */
+/* line 275, ../sass/_main.scss */
 #people ul {
   margin-bottom: 30px;
   *zoom: 1;
@@ -692,18 +696,18 @@ section {
 #people ul:after {
   clear: both;
 }
-/* line 273, ../sass/_main.scss */
+/* line 278, ../sass/_main.scss */
 #people ul li {
   float: left;
   width: 30.864197530864%;
   margin-right: 3.7037%;
 }
-/* line 277, ../sass/_main.scss */
+/* line 282, ../sass/_main.scss */
 #people ul li:nth-child(3) {
   margin-right: 0;
 }
 
-/* line 283, ../sass/_main.scss */
+/* line 288, ../sass/_main.scss */
 .person {
   width: 100px;
   height: 100px;
@@ -713,12 +717,12 @@ section {
   overflow: hidden;
   margin-bottom: 20px;
 }
-/* line 289, ../sass/_main.scss */
+/* line 294, ../sass/_main.scss */
 .person img {
   max-width: 100%;
 }
 
-/* line 297, ../sass/_main.scss */
+/* line 302, ../sass/_main.scss */
 footer {
   background: #b5533f;
   color: white;
@@ -740,22 +744,22 @@ footer:before, footer:after {
 footer:after {
   clear: both;
 }
-/* line 308, ../sass/_main.scss */
+/* line 313, ../sass/_main.scss */
 footer .logo {
   float: left;
   margin-right: 3.7037%;
   margin-bottom: 0;
 }
-/* line 313, ../sass/_main.scss */
+/* line 318, ../sass/_main.scss */
 footer p {
   margin-bottom: 0;
 }
-/* line 316, ../sass/_main.scss */
+/* line 321, ../sass/_main.scss */
 footer .contact-details {
   float: left;
   margin-top: 13px;
 }
-/* line 320, ../sass/_main.scss */
+/* line 325, ../sass/_main.scss */
 footer #copyright {
   float: right;
   text-align: right;
@@ -766,7 +770,7 @@ footer #copyright {
    Media Queries
    ========================================================================== */
 @media (max-width: 1024px) {
-  /* line 353, ../sass/_main.scss */
+  /* line 358, ../sass/_main.scss */
   #hero-content {
     width: 71.428571428571%;
   }
@@ -774,116 +778,116 @@ footer #copyright {
 /* Portrait tablet to landscape and desktop */
 /* Landscape phone to portrait tablet */
 @media (max-width: 768px) {
-  /* line 364, ../sass/_main.scss */
+  /* line 369, ../sass/_main.scss */
   #introduction {
     font-size: 14px;
   }
 }
 /* Landscape phones and down */
 @media (max-width: 667px) {
-  /* line 372, ../sass/_main.scss */
+  /* line 377, ../sass/_main.scss */
   section {
     padding: 100px 0;
   }
 
-  /* line 375, ../sass/_main.scss */
+  /* line 380, ../sass/_main.scss */
   h2 {
     font-size: 34px;
     line-height: 42px;
   }
 
-  /* line 379, ../sass/_main.scss */
+  /* line 384, ../sass/_main.scss */
   #introduction {
     font-size: 16px;
   }
 
-  /* line 382, ../sass/_main.scss */
+  /* line 387, ../sass/_main.scss */
   #hero-content {
     width: 100%;
   }
 
-  /* line 385, ../sass/_main.scss */
+  /* line 390, ../sass/_main.scss */
   #intro-content .col-4, #press .col-4 {
     width: 100%;
     margin-right: 0;
     float: none;
   }
 
-  /* line 390, ../sass/_main.scss */
+  /* line 395, ../sass/_main.scss */
   #introduction {
     font-size: 18px;
   }
 
-  /* line 393, ../sass/_main.scss */
+  /* line 398, ../sass/_main.scss */
   #people ul li {
     width: 100%;
     margin-right: 0;
     float: none;
     margin-bottom: 60px;
   }
-  /* line 398, ../sass/_main.scss */
+  /* line 403, ../sass/_main.scss */
   #people ul li:last-child {
     margin-bottom: 0;
   }
 }
 @media (max-width: 414px) {
-  /* line 405, ../sass/_main.scss */
+  /* line 410, ../sass/_main.scss */
   section {
     padding: 80px 0;
   }
 
-  /* line 408, ../sass/_main.scss */
+  /* line 413, ../sass/_main.scss */
   .container {
     padding: 0 20px;
   }
 
-  /* line 411, ../sass/_main.scss */
+  /* line 416, ../sass/_main.scss */
   h1 {
     font-size: 32px;
     line-height: 40px;
   }
 
-  /* line 415, ../sass/_main.scss */
+  /* line 420, ../sass/_main.scss */
   #hero p {
     font-size: 18px;
   }
 
-  /* line 418, ../sass/_main.scss */
+  /* line 423, ../sass/_main.scss */
   h2 {
     margin-bottom: 40px;
   }
 
-  /* line 421, ../sass/_main.scss */
+  /* line 426, ../sass/_main.scss */
   #introduction {
     font-size: 16px;
   }
 
-  /* line 424, ../sass/_main.scss */
+  /* line 429, ../sass/_main.scss */
   .company {
     width: 100%;
     margin-right: 0;
     float: none;
   }
 
-  /* line 429, ../sass/_main.scss */
+  /* line 434, ../sass/_main.scss */
   footer .logo {
     float: none;
     margin-bottom: 60px;
   }
 
-  /* line 433, ../sass/_main.scss */
+  /* line 438, ../sass/_main.scss */
   footer .contact-details {
     float: none;
   }
 
-  /* line 436, ../sass/_main.scss */
+  /* line 441, ../sass/_main.scss */
   footer #copyright {
     text-align: left;
     float: none;
   }
 }
 @media only screen and (-webkit-min-device-pixel-ratio: 1.5), only screen and (min-device-pixel-ratio: 1.5) {
-  /* line 447, ../sass/_main.scss */
+  /* line 452, ../sass/_main.scss */
   .logo {
     background-image: url("../img/logo@2x.png");
   }
