--- a/stylesheets/screen.css
+++ b/stylesheets/screen.css
@@ -586,7 +586,7 @@ section {
 .company h3 img {
   width: 100%;
   vertical-align: middle;
-  max-height: 50px;
+  max-height: 70px;
 }
 /* line 185, ../sass/_main.scss */
 .company#domo img {
@@ -594,7 +594,7 @@ section {
 }
 /* line 188, ../sass/_main.scss */
 .company#insidesales img {
-  width: 170px;
+  width: 70px;
 }
 /* line 191, ../sass/_main.scss */
 .company#lucid img {
@@ -618,11 +618,11 @@ section {
 }
 /* line 206, ../sass/_main.scss */
 .company#tractable img {
-  width: 44px;
+  width: 110px;
 }
 /* line 209, ../sass/_main.scss */
 .company#content img {
-  width: 110px;
+  width: 130px;
 }
 /* line 212, ../sass/_main.scss */
 .company#optimine img {
@@ -641,16 +641,16 @@ section {
   width: 140px;
 }
 /* line 227, ../sass/_main.scss */
-.company#appdiff img {
-  width: 170px;
+.company#test-ai img {
+  width: 140px;
 }
 /* line 232, ../sass/_main.scss */
 .company#focal img {
-  width: 78px;
+  width: 88px;
 }
 /* line 237, ../sass/_main.scss */
 .company#lilt img {
-  width: 50px;
+  width: 110px;
 }
 /* line 242, ../sass/_main.scss */
 .company#falkonry img {
@@ -672,17 +672,25 @@ section {
 .company#constructor img {
   width: 170px;
 }
+/* line 267, ../sass/_main.scss */
+.company#finite-state img {
+  width: 190px;
+}
+/* line 272, ../sass/_main.scss */
+.company#rever img {
+  width: 90px;
+}
 
-/* line 269, ../sass/_main.scss */
+/* line 279, ../sass/_main.scss */
 #people {
   background: #F5F5F5;
   padding-bottom: 90px;
 }
-/* line 272, ../sass/_main.scss */
+/* line 282, ../sass/_main.scss */
 #people h2 {
   color: #155B62;
 }
-/* line 275, ../sass/_main.scss */
+/* line 285, ../sass/_main.scss */
 #people ul {
   margin-bottom: 30px;
   *zoom: 1;
@@ -696,18 +704,18 @@ section {
 #people ul:after {
   clear: both;
 }
-/* line 278, ../sass/_main.scss */
+/* line 288, ../sass/_main.scss */
 #people ul li {
   float: left;
   width: 30.864197530864%;
   margin-right: 3.7037%;
 }
-/* line 282, ../sass/_main.scss */
+/* line 292, ../sass/_main.scss */
 #people ul li:nth-child(3) {
   margin-right: 0;
 }
 
-/* line 288, ../sass/_main.scss */
+/* line 298, ../sass/_main.scss */
 .person {
   width: 100px;
   height: 100px;
@@ -717,12 +725,12 @@ section {
   overflow: hidden;
   margin-bottom: 20px;
 }
-/* line 294, ../sass/_main.scss */
+/* line 304, ../sass/_main.scss */
 .person img {
   max-width: 100%;
 }
 
-/* line 302, ../sass/_main.scss */
+/* line 312, ../sass/_main.scss */
 footer {
   background: #b5533f;
   color: white;
@@ -744,22 +752,22 @@ footer:before, footer:after {
 footer:after {
   clear: both;
 }
-/* line 313, ../sass/_main.scss */
+/* line 323, ../sass/_main.scss */
 footer .logo {
   float: left;
   margin-right: 3.7037%;
   margin-bottom: 0;
 }
-/* line 318, ../sass/_main.scss */
+/* line 328, ../sass/_main.scss */
 footer p {
   margin-bottom: 0;
 }
-/* line 321, ../sass/_main.scss */
+/* line 331, ../sass/_main.scss */
 footer .contact-details {
   float: left;
   margin-top: 13px;
 }
-/* line 325, ../sass/_main.scss */
+/* line 335, ../sass/_main.scss */
 footer #copyright {
   float: right;
   text-align: right;
@@ -770,7 +778,7 @@ footer #copyright {
    Media Queries
    ========================================================================== */
 @media (max-width: 1024px) {
-  /* line 358, ../sass/_main.scss */
+  /* line 368, ../sass/_main.scss */
   #hero-content {
     width: 71.428571428571%;
   }
@@ -778,116 +786,116 @@ footer #copyright {
 /* Portrait tablet to landscape and desktop */
 /* Landscape phone to portrait tablet */
 @media (max-width: 768px) {
-  /* line 369, ../sass/_main.scss */
+  /* line 379, ../sass/_main.scss */
   #introduction {
     font-size: 14px;
   }
 }
 /* Landscape phones and down */
 @media (max-width: 667px) {
-  /* line 377, ../sass/_main.scss */
+  /* line 387, ../sass/_main.scss */
   section {
     padding: 100px 0;
   }
 
-  /* line 380, ../sass/_main.scss */
+  /* line 390, ../sass/_main.scss */
   h2 {
     font-size: 34px;
     line-height: 42px;
   }
 
-  /* line 384, ../sass/_main.scss */
+  /* line 394, ../sass/_main.scss */
   #introduction {
     font-size: 16px;
   }
 
-  /* line 387, ../sass/_main.scss */
+  /* line 397, ../sass/_main.scss */
   #hero-content {
     width: 100%;
   }
 
-  /* line 390, ../sass/_main.scss */
+  /* line 400, ../sass/_main.scss */
   #intro-content .col-4, #press .col-4 {
     width: 100%;
     margin-right: 0;
     float: none;
   }
 
-  /* line 395, ../sass/_main.scss */
+  /* line 405, ../sass/_main.scss */
   #introduction {
     font-size: 18px;
   }
 
-  /* line 398, ../sass/_main.scss */
+  /* line 408, ../sass/_main.scss */
   #people ul li {
     width: 100%;
     margin-right: 0;
     float: none;
     margin-bottom: 60px;
   }
-  /* line 403, ../sass/_main.scss */
+  /* line 413, ../sass/_main.scss */
   #people ul li:last-child {
     margin-bottom: 0;
   }
 }
 @media (max-width: 414px) {
-  /* line 410, ../sass/_main.scss */
+  /* line 420, ../sass/_main.scss */
   section {
     padding: 80px 0;
   }
 
-  /* line 413, ../sass/_main.scss */
+  /* line 423, ../sass/_main.scss */
   .container {
     padding: 0 20px;
   }
 
-  /* line 416, ../sass/_main.scss */
+  /* line 426, ../sass/_main.scss */
   h1 {
     font-size: 32px;
     line-height: 40px;
   }
 
-  /* line 420, ../sass/_main.scss */
+  /* line 430, ../sass/_main.scss */
   #hero p {
     font-size: 18px;
   }
 
-  /* line 423, ../sass/_main.scss */
+  /* line 433, ../sass/_main.scss */
   h2 {
     margin-bottom: 40px;
   }
 
-  /* line 426, ../sass/_main.scss */
+  /* line 436, ../sass/_main.scss */
   #introduction {
     font-size: 16px;
   }
 
-  /* line 429, ../sass/_main.scss */
+  /* line 439, ../sass/_main.scss */
   .company {
     width: 100%;
     margin-right: 0;
     float: none;
   }
 
-  /* line 434, ../sass/_main.scss */
+  /* line 444, ../sass/_main.scss */
   footer .logo {
     float: none;
     margin-bottom: 60px;
   }
 
-  /* line 438, ../sass/_main.scss */
+  /* line 448, ../sass/_main.scss */
   footer .contact-details {
     float: none;
   }
 
-  /* line 441, ../sass/_main.scss */
+  /* line 451, ../sass/_main.scss */
   footer #copyright {
     text-align: left;
     float: none;
   }
 }
 @media only screen and (-webkit-min-device-pixel-ratio: 1.5), only screen and (min-device-pixel-ratio: 1.5) {
-  /* line 452, ../sass/_main.scss */
+  /* line 462, ../sass/_main.scss */
   .logo {
     background-image: url("../img/logo@2x.png");
   }
