--- a/sass/_main.scss
+++ b/sass/_main.scss
@@ -270,7 +270,12 @@ section {
   }
   &#rever {
     img {
-      width: 90px;
+      width: 130px;
+    }
+  }
+  &#promethium {
+    img {
+      width: 180px;
     }
   }
 }
