--- a/stylesheets/screen.css
+++ b/stylesheets/screen.css
@@ -678,19 +678,23 @@ section {
 }
 /* line 272, ../sass/_main.scss */
 .company#rever img {
-  width: 90px;
+  width: 130px;
+}
+/* line 277, ../sass/_main.scss */
+.company#promethium img {
+  width: 180px;
 }
 
-/* line 279, ../sass/_main.scss */
+/* line 284, ../sass/_main.scss */
 #people {
   background: #F5F5F5;
   padding-bottom: 90px;
 }
-/* line 282, ../sass/_main.scss */
+/* line 287, ../sass/_main.scss */
 #people h2 {
   color: #155B62;
 }
-/* line 285, ../sass/_main.scss */
+/* line 290, ../sass/_main.scss */
 #people ul {
   margin-bottom: 30px;
   *zoom: 1;
@@ -704,18 +708,18 @@ section {
 #people ul:after {
   clear: both;
 }
-/* line 288, ../sass/_main.scss */
+/* line 293, ../sass/_main.scss */
 #people ul li {
   float: left;
   width: 30.864197530864%;
   margin-right: 3.7037%;
 }
-/* line 292, ../sass/_main.scss */
+/* line 297, ../sass/_main.scss */
 #people ul li:nth-child(3) {
   margin-right: 0;
 }
 
-/* line 298, ../sass/_main.scss */
+/* line 303, ../sass/_main.scss */
 .person {
   width: 100px;
   height: 100px;
@@ -725,12 +729,12 @@ section {
   overflow: hidden;
   margin-bottom: 20px;
 }
-/* line 304, ../sass/_main.scss */
+/* line 309, ../sass/_main.scss */
 .person img {
   max-width: 100%;
 }
 
-/* line 312, ../sass/_main.scss */
+/* line 317, ../sass/_main.scss */
 footer {
   background: #b5533f;
   color: white;
@@ -752,22 +756,22 @@ footer:before, footer:after {
 footer:after {
   clear: both;
 }
-/* line 323, ../sass/_main.scss */
+/* line 328, ../sass/_main.scss */
 footer .logo {
   float: left;
   margin-right: 3.7037%;
   margin-bottom: 0;
 }
-/* line 328, ../sass/_main.scss */
+/* line 333, ../sass/_main.scss */
 footer p {
   margin-bottom: 0;
 }
-/* line 331, ../sass/_main.scss */
+/* line 336, ../sass/_main.scss */
 footer .contact-details {
   float: left;
   margin-top: 13px;
 }
-/* line 335, ../sass/_main.scss */
+/* line 340, ../sass/_main.scss */
 footer #copyright {
   float: right;
   text-align: right;
@@ -778,7 +782,7 @@ footer #copyright {
    Media Queries
    ========================================================================== */
 @media (max-width: 1024px) {
-  /* line 368, ../sass/_main.scss */
+  /* line 373, ../sass/_main.scss */
   #hero-content {
     width: 71.428571428571%;
   }
@@ -786,116 +790,116 @@ footer #copyright {
 /* Portrait tablet to landscape and desktop */
 /* Landscape phone to portrait tablet */
 @media (max-width: 768px) {
-  /* line 379, ../sass/_main.scss */
+  /* line 384, ../sass/_main.scss */
   #introduction {
     font-size: 14px;
   }
 }
 /* Landscape phones and down */
 @media (max-width: 667px) {
-  /* line 387, ../sass/_main.scss */
+  /* line 392, ../sass/_main.scss */
   section {
     padding: 100px 0;
   }
 
-  /* line 390, ../sass/_main.scss */
+  /* line 395, ../sass/_main.scss */
   h2 {
     font-size: 34px;
     line-height: 42px;
   }
 
-  /* line 394, ../sass/_main.scss */
+  /* line 399, ../sass/_main.scss */
   #introduction {
     font-size: 16px;
   }
 
-  /* line 397, ../sass/_main.scss */
+  /* line 402, ../sass/_main.scss */
   #hero-content {
     width: 100%;
   }
 
-  /* line 400, ../sass/_main.scss */
+  /* line 405, ../sass/_main.scss */
   #intro-content .col-4, #press .col-4 {
     width: 100%;
     margin-right: 0;
     float: none;
   }
 
-  /* line 405, ../sass/_main.scss */
+  /* line 410, ../sass/_main.scss */
   #introduction {
     font-size: 18px;
   }
 
-  /* line 408, ../sass/_main.scss */
+  /* line 413, ../sass/_main.scss */
   #people ul li {
     width: 100%;
     margin-right: 0;
     float: none;
     margin-bottom: 60px;
   }
-  /* line 413, ../sass/_main.scss */
+  /* line 418, ../sass/_main.scss */
   #people ul li:last-child {
     margin-bottom: 0;
   }
 }
 @media (max-width: 414px) {
-  /* line 420, ../sass/_main.scss */
+  /* line 425, ../sass/_main.scss */
   section {
     padding: 80px 0;
   }
 
-  /* line 423, ../sass/_main.scss */
+  /* line 428, ../sass/_main.scss */
   .container {
     padding: 0 20px;
   }
 
-  /* line 426, ../sass/_main.scss */
+  /* line 431, ../sass/_main.scss */
   h1 {
     font-size: 32px;
     line-height: 40px;
   }
 
-  /* line 430, ../sass/_main.scss */
+  /* line 435, ../sass/_main.scss */
   #hero p {
     font-size: 18px;
   }
 
-  /* line 433, ../sass/_main.scss */
+  /* line 438, ../sass/_main.scss */
   h2 {
     margin-bottom: 40px;
   }
 
-  /* line 436, ../sass/_main.scss */
+  /* line 441, ../sass/_main.scss */
   #introduction {
     font-size: 16px;
   }
 
-  /* line 439, ../sass/_main.scss */
+  /* line 444, ../sass/_main.scss */
   .company {
     width: 100%;
     margin-right: 0;
     float: none;
   }
 
-  /* line 444, ../sass/_main.scss */
+  /* line 449, ../sass/_main.scss */
   footer .logo {
     float: none;
     margin-bottom: 60px;
   }
 
-  /* line 448, ../sass/_main.scss */
+  /* line 453, ../sass/_main.scss */
   footer .contact-details {
     float: none;
   }
 
-  /* line 451, ../sass/_main.scss */
+  /* line 456, ../sass/_main.scss */
   footer #copyright {
     text-align: left;
     float: none;
   }
 }
 @media only screen and (-webkit-min-device-pixel-ratio: 1.5), only screen and (min-device-pixel-ratio: 1.5) {
-  /* line 462, ../sass/_main.scss */
+  /* line 467, ../sass/_main.scss */
   .logo {
     background-image: url("../img/logo@2x.png");
   }
