--- a/sass/_main.scss
+++ b/sass/_main.scss
@@ -283,6 +283,16 @@ section {
       width: 170px;
     }
   }
+  &#verusen {
+    img {
+      width: 170px;
+    }
+  }
+  &#myia {
+    img {
+      width: 110px;
+    }
+  }
 }
 
 
