--- a/stylesheets/screen.css
+++ b/stylesheets/screen.css
@@ -688,17 +688,25 @@ section {
 .company#crate img {
   width: 170px;
 }
+/* line 287, ../sass/_main.scss */
+.company#verusen img {
+  width: 170px;
+}
+/* line 292, ../sass/_main.scss */
+.company#myia img {
+  width: 110px;
+}
 
-/* line 289, ../sass/_main.scss */
+/* line 299, ../sass/_main.scss */
 #people {
   background: #F5F5F5;
   padding-bottom: 90px;
 }
-/* line 292, ../sass/_main.scss */
+/* line 302, ../sass/_main.scss */
 #people h2 {
   color: #155B62;
 }
-/* line 295, ../sass/_main.scss */
+/* line 305, ../sass/_main.scss */
 #people ul {
   margin-bottom: 30px;
   *zoom: 1;
@@ -712,18 +720,18 @@ section {
 #people ul:after {
   clear: both;
 }
-/* line 298, ../sass/_main.scss */
+/* line 308, ../sass/_main.scss */
 #people ul li {
   float: left;
   width: 30.864197530864%;
   margin-right: 3.7037%;
 }
-/* line 302, ../sass/_main.scss */
+/* line 312, ../sass/_main.scss */
 #people ul li:nth-child(3) {
   margin-right: 0;
 }
 
-/* line 308, ../sass/_main.scss */
+/* line 318, ../sass/_main.scss */
 .person {
   width: 100px;
   height: 100px;
@@ -733,12 +741,12 @@ section {
   overflow: hidden;
   margin-bottom: 20px;
 }
-/* line 314, ../sass/_main.scss */
+/* line 324, ../sass/_main.scss */
 .person img {
   max-width: 100%;
 }
 
-/* line 322, ../sass/_main.scss */
+/* line 332, ../sass/_main.scss */
 footer {
   background: #b5533f;
   color: white;
@@ -760,22 +768,22 @@ footer:before, footer:after {
 footer:after {
   clear: both;
 }
-/* line 333, ../sass/_main.scss */
+/* line 343, ../sass/_main.scss */
 footer .logo {
   float: left;
   margin-right: 3.7037%;
   margin-bottom: 0;
 }
-/* line 338, ../sass/_main.scss */
+/* line 348, ../sass/_main.scss */
 footer p {
   margin-bottom: 0;
 }
-/* line 341, ../sass/_main.scss */
+/* line 351, ../sass/_main.scss */
 footer .contact-details {
   float: left;
   margin-top: 13px;
 }
-/* line 345, ../sass/_main.scss */
+/* line 355, ../sass/_main.scss */
 footer #copyright {
   float: right;
   text-align: right;
@@ -786,7 +794,7 @@ footer #copyright {
    Media Queries
    ========================================================================== */
 @media (max-width: 1024px) {
-  /* line 378, ../sass/_main.scss */
+  /* line 388, ../sass/_main.scss */
   #hero-content {
     width: 71.428571428571%;
   }
@@ -794,116 +802,116 @@ footer #copyright {
 /* Portrait tablet to landscape and desktop */
 /* Landscape phone to portrait tablet */
 @media (max-width: 768px) {
-  /* line 389, ../sass/_main.scss */
+  /* line 399, ../sass/_main.scss */
   #introduction {
     font-size: 14px;
   }
 }
 /* Landscape phones and down */
 @media (max-width: 667px) {
-  /* line 397, ../sass/_main.scss */
+  /* line 407, ../sass/_main.scss */
   section {
     padding: 100px 0;
   }
 
-  /* line 400, ../sass/_main.scss */
+  /* line 410, ../sass/_main.scss */
   h2 {
     font-size: 34px;
     line-height: 42px;
   }
 
-  /* line 404, ../sass/_main.scss */
+  /* line 414, ../sass/_main.scss */
   #introduction {
     font-size: 16px;
   }
 
-  /* line 407, ../sass/_main.scss */
+  /* line 417, ../sass/_main.scss */
   #hero-content {
     width: 100%;
   }
 
-  /* line 410, ../sass/_main.scss */
+  /* line 420, ../sass/_main.scss */
   #intro-content .col-4, #press .col-4 {
     width: 100%;
     margin-right: 0;
     float: none;
   }
 
-  /* line 415, ../sass/_main.scss */
+  /* line 425, ../sass/_main.scss */
   #introduction {
     font-size: 18px;
   }
 
-  /* line 418, ../sass/_main.scss */
+  /* line 428, ../sass/_main.scss */
   #people ul li {
     width: 100%;
     margin-right: 0;
     float: none;
     margin-bottom: 60px;
   }
-  /* line 423, ../sass/_main.scss */
+  /* line 433, ../sass/_main.scss */
   #people ul li:last-child {
     margin-bottom: 0;
   }
 }
 @media (max-width: 414px) {
-  /* line 430, ../sass/_main.scss */
+  /* line 440, ../sass/_main.scss */
   section {
     padding: 80px 0;
   }
 
-  /* line 433, ../sass/_main.scss */
+  /* line 443, ../sass/_main.scss */
   .container {
     padding: 0 20px;
   }
 
-  /* line 436, ../sass/_main.scss */
+  /* line 446, ../sass/_main.scss */
   h1 {
     font-size: 32px;
     line-height: 40px;
   }
 
-  /* line 440, ../sass/_main.scss */
+  /* line 450, ../sass/_main.scss */
   #hero p {
     font-size: 18px;
   }
 
-  /* line 443, ../sass/_main.scss */
+  /* line 453, ../sass/_main.scss */
   h2 {
     margin-bottom: 40px;
   }
 
-  /* line 446, ../sass/_main.scss */
+  /* line 456, ../sass/_main.scss */
   #introduction {
     font-size: 16px;
   }
 
-  /* line 449, ../sass/_main.scss */
+  /* line 459, ../sass/_main.scss */
   .company {
     width: 100%;
     margin-right: 0;
     float: none;
   }
 
-  /* line 454, ../sass/_main.scss */
+  /* line 464, ../sass/_main.scss */
   footer .logo {
     float: none;
     margin-bottom: 60px;
   }
 
-  /* line 458, ../sass/_main.scss */
+  /* line 468, ../sass/_main.scss */
   footer .contact-details {
     float: none;
   }
 
-  /* line 461, ../sass/_main.scss */
+  /* line 471, ../sass/_main.scss */
   footer #copyright {
     text-align: left;
     float: none;
   }
 }
 @media only screen and (-webkit-min-device-pixel-ratio: 1.5), only screen and (min-device-pixel-ratio: 1.5) {
-  /* line 472, ../sass/_main.scss */
+  /* line 482, ../sass/_main.scss */
   .logo {
     background-image: url("../img/logo@2x.png");
   }
